--- a/test/DOM_v3/web/styles.css
+++ b/test/DOM_v3/web/styles.css
@@ -1,16 +1,52 @@
+/* body {
+    background-color: #F8F8F8;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.2em;
+    margin: 15px;
+}
+*/
+
 body {
-	background-color: #F8F8F8;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
-	font-weight: normal;
-	line-height: 1.2em;
-	margin: 15px;
+    padding: 5px;
+}
+[class*="col-"], footer {
+    border: 1px solid black;
+    border-radius: 6px;
+    line-height: 40px;
+    text-align: center;
+}
+#debugger_container, footer {
+    background-color: rgba(0, 71, 171, 0.2);
+}
+#debugger_container {
+    padding: 3px;
+}
+#debugger_body {
+    padding: 2px;
+}
+
+#debugger_body td {
+    font-size: 12px;
+}
+
+#debugger_memory_explorer td {
+    font-size: 11px;
+}
+#debugger_memory_explorer th {
+    font-size: 12px;
+}
+
+#debugger_autobreak_span {
+    background-color: rgba(71, 71, 71, 0.2);
+    padding: 5px;
 }
 
 #magbut {
-	padding: 15px;
-	background-color: #FF5A5F;
-	font-family: 'Open Sans', sans-serif;
-	color: #FFFFFF;
-	text-align: center
+    /* padding: 15px; */
+    background-color: #FF5A5F;
+    font-family: 'Open Sans', sans-serif;
+    color: #FFFFFF;
+    /* text-align: center */
 }
