Update DOM_V3 Add sliding on debugger body

--- a/test/DOM_v3/web/styles.css
+++ b/test/DOM_v3/web/styles.css
@@ -10,7 +10,13 @@
 
 body {
     padding: 5px;
+    padding-top: 50px;
 }
+.starter-template {
+  padding: 40px 15px;
+  text-align: center;
+}
+
 [class*="col-"], footer {
     border: 1px solid black;
     border-radius: 6px;
