Update DOM_v3   Add emulator/mem_registers.dart   Remove enum {V, O}Register   Add ft/TripleIterable   Add web/debugger/mem_registers.{html, dart}   Remove web/debugger/{other, video}_registers.{html, dart}   Update boostrap version from 3.3.1 to 3.3.7   Add boostrap's tooltip init in web/main.dart   Update emulator/src/emulator.dart maps   Update emulator/src/worker.dart debug

--- a/test/DOM_v3/web/styles.css
+++ b/test/DOM_v3/web/styles.css
@@ -49,6 +49,13 @@ body {
     padding: 5px;
 }
 
+.debLabelCgb {
+    margin-left: 2px;
+}
+.tooltip-inner {
+    white-space:pre;
+    max-width:none;
+}
 #magbut {
     /* padding: 15px; */
     background-color: #FF5A5F;
