--- a/web/styles.css
+++ b/web/styles.css
@@ -12,25 +12,30 @@ body {
     padding: 5px;
     padding-top: 50px;
 }
-.starter-template {
-  padding: 40px 15px;
+
+#magbut {
+  background-color: #FF5A5F;
+  font-family: 'Open Sans', sans-serif;
+  color: #FFFFFF;
   text-align: center;
 }
 
 [class*="col-"], footer {
     border: 1px solid black;
     border-radius: 6px;
-    /* line-height: 40px; */
     text-align: center;
 }
+
 #debContainer, footer {
     background-color: rgba(0, 71, 171, 0.2);
 }
+
 #debContainer {
-    padding: 3px;
+    /*padding: 3px;*/
 }
+
 #debBody {
-    padding: 2px;
+    /*padding: 2px;*/
 }
 
 #debBody td {
@@ -44,12 +49,9 @@ body {
     font-size: 12px;
 }
 
-/* #debStatusButton { */
-    /* background-color: rgba(71, 71, 71, 0.2); */
-/* margin-right: 200px; */
-/* margin-right: 20px; */
-/* padding: 10px; */
-/* } */
+.debStatusButton { 
+  margin-right: 20px; 
+}
 
 .debLabelCgb {
     margin-left: 2px;
@@ -57,11 +59,4 @@ body {
 .tooltip-inner {
     white-space:pre;
     max-width:none;
-}
-#magbut {
-    /* padding: 15px; */
-    background-color: #FF5A5F;
-    font-family: 'Open Sans', sans-serif;
-    color: #FFFFFF;
-    /* text-align: center */
 }
