--- a/web/styles.css
+++ b/web/styles.css
@@ -64,6 +64,7 @@ body {
 
 #mainSpeedSlider {
     margin-top: 20px;
-    width: 90%;
+    margin-left: 20px;
+    width: 80%;
     background: #BABABA;
 }
