Major changes   Add `Event` and `State` enums in worker.dart.   Add an `event stream` to AWorker to enable notifications of `Event` events inside the worker isolate.   Add 3 functions to `AWorker` to control GameBoy state and launch events accordingly.   Rewrote all 3 `worker mixins` to allow pause/resume of main loops according to `Event` and `State`.   Add `Debug` Port to `wired_isolate`.   Add 2 red debug buttons to DOM next to magbut

--- a/web/styles.css
+++ b/web/styles.css
@@ -13,7 +13,7 @@ body {
     padding-top: 50px;
 }
 
-#magbut {
+#magbut, #ejectbut, #crashbut {
   background-color: #FF5A5F;
   font-family: 'Open Sans', sans-serif;
   color: #FFFFFF;
