--- a/web/styles.css
+++ b/web/styles.css
@@ -10,6 +10,8 @@
 
 body {
     padding: 5px;
+    background: url('images/seamless_rough_plastic_texture_nes_by_blueamnesiac-d4mxqci.png') repeat;
+    color: white;
     /* padding-top: 50px; */
 }
 
@@ -48,12 +50,22 @@ body {
 /* DEB ********************************************************************** */
 #debContainer {
     background-color: rgba(0, 71, 171, 0.2);
+    color: white;
     /*padding: 3px;*/
 }
 
 /* DEB - TOGGLE ************************************************************* */
 #debButtonToggle {
     width: 100%;
+    margin: 0px 0px;
+    /* margin-top: 10px; */
+    /* line-height: 0px; */
+}
+
+#debButtonToggle h3 {
+    /* width: 100%; */
+    margin: 10px 0px;
+    /* line-height: 0px; */
 }
 
 /* DEB - BODY *************************************************************** */
@@ -63,6 +75,39 @@ body {
 
 #debBody td {
     font-size: 12px;
+    color: #005B79;
+    /* color: rgba(0, 0, 0, 0); */
+}
+
+#debBody td .debTextHighlight {
+    color: #FF1E00;
+    background-color: red;
+}
+
+#debBody h4 {
+    color: GhostWhite;
+}
+
+#debBody th
+{
+    /* background-color: rgba(173, 216, 230, 1.0); // light blue */
+    background-color: rgba(81, 144, 165, 1.0); /* strong blue */
+}
+/* #debBody th */
+
+#debColRegisters tr:nth-child(2n+1) > td,
+#debColInstructionFlow tr:nth-child(2n+1) > td,
+#debColMemoryExplorer tr:nth-child(2n+1) > td
+{
+    background-color: rgba(181, 190, 234, 1.0); /* light purple */
+}
+
+#debColRegisters tr:nth-child(2n) > td,
+#debColInstructionFlow tr:nth-child(2n) > td,
+#debColMemoryExplorer tr:nth-child(2n) > td
+{
+    background-color: rgba(176, 237, 197, 1.0); /* light green */
+    /* background-color: rgba(89, 191, 124, 1.0); // strong green */
 }
 
 /* DEB - BODY - TIMINGS ***************************************************** */
