Major Changes   Html/css improvements   Change order of Html elements, add a nav-bar and panels below it containing Html elements   Clean css

--- a/web/styles.css
+++ b/web/styles.css
@@ -1,23 +1,18 @@
-/* body {
-    background-color: #F8F8F8;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 1.2em;
-    margin: 15px;
-}
-*/
+
+/* ************************************************************************** */
+/* BODY ********************************************************************* */
+/* ************************************************************************** */
 
 body {
     padding: 5px;
     background: url('images/seamless_rough_plastic_texture_nes_by_blueamnesiac-d4mxqci.png') repeat;
     color: white;
-    /* padding-top: 50px; */
+    padding-top: 50px;
 }
 
 [class*="col-"] {
-    border: 1px solid black;
-    border-radius: 6px;
+    /* border: 1px solid black; */
+    /* border-radius: 6px; */
     text-align: center;
 }
 
@@ -26,17 +21,36 @@ body {
     max-width:none;
 }
 
-.alert strong {
-    /* font-size: 12px; */
-    margin-right: 5px;
+/* ************************************************************************** */
+/* NAV ********************************************************************** */
+/* ************************************************************************** */
+
+#debButtonToggle {
+    width: 100%;
+    margin: 0px 0px;
 }
 
-.alert span {
-    font-size: 12px;
-    /* margin-left: px; */
+/* ************************************************************************** */
+/* PANELS GLOBAL ************************************************************ */
+/* ************************************************************************** */
+
+#debContainer, #optContainer {
 }
+
+#debBody, #optBody {
+    background-color: rgba(0, 71, 171, 0.2);
+    border: 1px solid black;
+    border-radius: 6px;
+}
+
+/* ************************************************************************** */
+/* OPTIONS PANEL ************************************************************ */
+/* ************************************************************************** */
+
+/* SPEED SLIDER ************************************************************* */
 
 #mainSpeedText {
+    margin-left: 15px;
     text-align: right;
 }
 
@@ -47,36 +61,25 @@ body {
     background: #BABABA;
 }
 
-/* DEB ********************************************************************** */
-#debContainer {
-    background-color: rgba(0, 71, 171, 0.2);
-    color: white;
-    /*padding: 3px;*/
+.slider-tick {
+    opacity: 1;
 }
 
-/* DEB - TOGGLE ************************************************************* */
-#debButtonToggle {
-    width: 100%;
-    margin: 0px 0px;
-    /* margin-top: 10px; */
-    /* line-height: 0px; */
-}
-
-#debButtonToggle h3 {
-    /* width: 100%; */
-    margin: 10px 0px;
-    /* line-height: 0px; */
-}
+/* ************************************************************************** */
+/* DEB PANEL **************************************************************** */
+/* ************************************************************************** */
 
 /* DEB - BODY *************************************************************** */
-#debBody {
-    /*padding: 2px;*/
+
+#debBody > div {
+}
+
+#debBody > div:last-child {
 }
 
 #debBody td {
     font-size: 12px;
     color: #005B79;
-    /* color: rgba(0, 0, 0, 0); */
 }
 
 #debBody td .debTextHighlight {
@@ -90,10 +93,8 @@ body {
 
 #debBody th
 {
-    /* background-color: rgba(173, 216, 230, 1.0); // light blue */
     background-color: rgba(81, 144, 165, 1.0); /* strong blue */
 }
-/* #debBody th */
 
 #debColRegisters tr:nth-child(2n+1) > td,
 #debColInstructionFlow tr:nth-child(2n+1) > td,
@@ -107,7 +108,6 @@ body {
 #debColMemoryExplorer tr:nth-child(2n) > td
 {
     background-color: rgba(176, 237, 197, 1.0); /* light green */
-    /* background-color: rgba(89, 191, 124, 1.0); // strong green */
 }
 
 /* DEB - BODY - TIMINGS ***************************************************** */
@@ -121,15 +121,54 @@ body {
 }
 
 /* DEB - BODY - BUTTONS ***************************************************** */
+#debColClock, #debColButtons {
+    margin-top: 5px;
+}
+
 .debStatusButton {
-    margin-right: 20px;
+    margin-right: 15px;
+}
+
+#debColButtons > p {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+#debColButtons > form {
+    display: inline-block;
 }
 
 /* DEB - BODY - REGISTER **************************************************** */
+#debColRegisters caption {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+#debColRegisters table {
+    margin-bottom: 0px;
+}
+
 /* DEB - BODY - INSTRUCTION FLOW ******************************************** */
+#debColInstructionFlow caption {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+#debColInstructionFlow table {
+    margin-bottom: 0px;
+}
+
 /* DEB - BODY - MEMORY EXPLORER ********************************************* */
+#debColMemoryExplorer caption {
+    padding-top: 0px;
+}
+
 #debColMemoryExplorer table {
     table-layout: fixed;
+}
+
+#debColMemoryExplorer thead th:first-child {
+    width: 48px;
 }
 
 #debColMemoryExplorer td {
@@ -138,6 +177,7 @@ body {
 
 #debColMemoryExplorer th {
     font-size: 12px;
+    white-space: nowrap;
 }
 
 /* DEB - BODY - MEMORY REGISTERS ******************************************** */
@@ -148,18 +188,42 @@ body {
     margin-left: 2px;
 }
 
+/* ************************************************************************** */
+/* CANVAS ******************************************************************* */
+/* ************************************************************************** */
+
+.canvas {
+    width: 500px;
+    height: 500px;
+    background-color: grey;
+    margin: auto;
+}
+
+
+/* ************************************************************************** */
+/* ALERTS ******************************************************************* */
+/* ************************************************************************** */
+
+#mainAlertBox {
+    width: 500xp
+}
+
+.alert strong {
+    margin-right: 5px;
+}
+
+.alert span {
+    font-size: 12px;
+}
+
+/* ************************************************************************** */
 /* FOOTER ******************************************************************* */
-/* footer {
-   position: absolute;
-   bottom: 0;
-   width: 100%;
-   height: 60px;
-   background-color: #f5f5f5;
-   }
- */
+/* ************************************************************************** */
+
 footer {
     border: 1px solid black;
     border-radius: 6px;
+    height: 20px;
     text-align: center;
     background-color: rgba(0, 71, 171, 0.2);
 }
