--- a/web/styles.css
+++ b/web/styles.css
@@ -199,6 +199,146 @@ body {
     margin: auto;
 }
 
+/* ************************************************************************** */
+/* COMPONENT SYSTEM ********************************************************* */
+/* ************************************************************************** */
+
+/* GAMEBOY CART SLOT ******************************************************** */
+#gb-slot {
+    padding: 7px;
+    width: 265px; /* 251 + padding * 2 */
+    background-color: gray;
+    min-height: 287px;
+}
+
+#gb-slot.gameboysocket-active {
+    background-color: rgba(0, 200, 0, 0.4);
+}
+
+#gb-slot.gameboysocket-hover {
+    background-color: rgba(0, 200, 0, 0.75);
+}
+
+/* DETACHED CART BANK ******************************************************* */
+#accordion {
+    background-color: black;
+    padding: 7px;
+    width: 265px; /* 251 + padding * 2 */
+    padding-top: 50px;
+}
+
+#accordion.accordion-active {
+    background-color: rgba(0, 200, 0, 0.4);
+}
+
+#accordion.accordion-hover {
+    background-color: rgba(0, 200, 0, 0.75);
+}
+
+/* DETACHED CHIP BANK ******************************************************* */
+#detached-chip-bank {
+    background-color: gray;
+    padding: 7px;
+    width: 265px;
+    min-height: 100px;
+}
+
+#detached-chip-bank.chipbank-active {
+    background-color: rgba(0, 200, 0, 0.4);
+}
+
+#detached-chip-bank.chipbank-hover {
+    background-color: rgba(0, 200, 0, 0.75);
+}
+
+/* CARTRIDGE **************************************************************** */
+.gameboy-cartridge {
+    background-color: rgba(0, 0, 0, 0.0);
+    border-width: 0px;
+}
+
+.gameboy-cartridge .btn:focus,
+.gameboy-cartridge .btn:active:focus,
+.gameboy-cartridge .btn.active:focus {
+    outline: 0 none;
+}
+
+.gameboy-cartridge .bg-head-btn {
+
+    height: 71px;
+    background: url(images/sprites.png) 0 0;
+    background-color: rgba(0, 0, 0, 0.0);
+    border-width: 0px;
+    border-radius: 0px;
+}
+
+.gameboy-cartridge .bg-head-btn.collapsed {
+    height: 53px;
+    background: url(images/sprites.png) 0 -18px;
+    background-color: rgba(0, 0, 0, 0.0);
+    border-width: 0px;
+    border-radius: 0px;
+}
+
+.gameboy-cartridge .panel-collapse {
+    height: 216px;
+    background:url(images/sprites.png) 0 -71px;
+    background-color: rgba(0, 0, 0, 0.0);
+}
+
+.gameboy-cartridge .panel-body {
+    cursor: move;
+    padding: 0px;
+    background-color: rgba(0, 0, 0, 0.0);
+}
+
+.gameboy-cartridge td,
+.gameboy-cartridge th {
+    vertical-align:top;
+}
+
+.gameboy-cartridge table, .cart-ram-bis, .cart-ss-bis {
+    border: 0px;
+}
+
+/* CHIP ********************************************************************* */
+.cart-ram-bis, .cart-ss-bis {
+	cursor: pointer;
+}
+
+/* CHIP SOCKET ************************************************************** */
+.cart-ram-socket {
+    border: 0px;
+    width: 182px;
+    height: 49px;
+    background-color: rgba(0, 255, 0, 0.0);
+}
+
+.cart-ss-socket {
+    border: 0px;
+    width: 86px;
+    height: 49px;
+}
+
+.cart-ram-socket-active {
+    /* height: 71 + 21 */
+    /* witdth: 251 + 31 */
+    background:url(images/sprites.png) -282px -92px;
+}
+
+.cart-ss-socket-active {
+    /* height: 71 + 21 + 52  */
+    /* witdth: 251 + 31 + 3 */
+    background:url(images/sprites.png) -285px -144px;
+}
+
+.cart-ram-socket-hover {
+    background:url(images/sprites.png) -533px -92px;
+}
+
+.cart-ss-socket-hover {
+    background:url(images/sprites.png) -536px -144px;
+}
 
 /* ************************************************************************** */
 /* ALERTS ******************************************************************* */
