--- a/web/styles.css
+++ b/web/styles.css
@@ -43,11 +43,16 @@ body {
     border-radius: 6px;
 }
 
+#cartsContainer {
+
+    text-align: left;
+}
+
 #cartsBody {
-    float: left;
+    /* float: left; */
     padding-left: 20px;
     padding-right: 20px;
-    display: inline-block
+    display: inline-block;
     /* margin-left:0; */
     /* margin-right:0; */
     /* margin: auto; */
