--- a/web/styles.css
+++ b/web/styles.css
@@ -52,6 +52,7 @@ body {
     /* float: left; */
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 20px;
     display: inline-block;
     /* margin-left:0; */
     /* margin-right:0; */
@@ -73,15 +74,29 @@ body {
 /* SPEED SLIDER ************************************************************* */
 
 #mainSpeedText {
-    margin-left: 15px;
+    padding-top: 15px;
     text-align: right;
+    width: 60px;
+    float:left;
+}
+
+#slider-cont {
+    float: right;
+    width: calc(100% - 60px);
+    margin: 0px auto;
+    padding-top: 15px;
+    padding-bottom: 5px;
+    padding-right: 27px;
+    padding-left: 11px;
 }
 
 #mainSpeedSlider {
-    margin-top: 20px;
-    margin-left: 20px;
-    width: 60%;
+    width: 100%;
     background: #BABABA;
+}
+.slider-tick-label {
+    width: 50px !important;
+    margin-left: -25px !important;
 }
 
 .slider-tick {
@@ -246,13 +261,17 @@ body {
     background-color: rgba(0, 200, 0, 0.75);
 }
 
+#label-gbsocket-empty {
+    padding-top: 58px;
+    text-align: center;
+}
+
 /* DETACHED CART BANK ******************************************************* */
 #accordion {
     background-color: rgba(246, 206, 149, 0.85);
     padding: 7px;
     width: 265px; /* 251 + padding * 2 */
     min-height: 143px; /* 287 / 2 */
-    /* padding-top: 50px; */
 }
 
 #accordion.accordion-active {
@@ -261,6 +280,11 @@ body {
 
 #accordion.accordion-hover {
     background-color: rgba(0, 200, 0, 0.75);
+}
+
+#label-no-cart {
+    padding-top: 48px;
+    text-align: center;
 }
 
 /* DETACHED CHIP BANK ******************************************************* */
@@ -277,6 +301,11 @@ body {
 
 #detached-chip-bank.chipbank-hover {
     background-color: rgba(0, 200, 0, 0.75);
+}
+
+#label-no-chip {
+    padding-top: 48px;
+    text-align: center;
 }
 
 /* CARTRIDGE **************************************************************** */
@@ -336,8 +365,33 @@ body {
 }
 
 /* CHIP ********************************************************************* */
-.cart-ram-bis, .cart-ss-bis {
+.cart-ram-bis,
+.cart-ss-bis {
+    height: 49px;
+    padding-top: 12px;
+    padding-left: 11px;
+    padding-right: 6px;
+    padding-bottom: 12px;
 	cursor: pointer;
+}
+
+.cart-ss-bis {
+    background: url(images/gb_ss.png) 0 0px;
+    width: 86px;
+}
+.cart-ram-bis {
+    background: url(images/gb_ram.png) 0 0px;
+    width: 182px;
+}
+
+.cart-ram-bis div,
+.cart-ss-bis div {
+    color: grey;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 14px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 /* CHIP SOCKET ************************************************************** */
