--- a/web/styles.css
+++ b/web/styles.css
@@ -21,6 +21,10 @@ body {
     max-width:none;
 }
 
+.tooltip {
+    pointer-events: none;
+}
+
 /* ************************************************************************** */
 /* NAV ********************************************************************** */
 /* ************************************************************************** */
@@ -37,7 +41,7 @@ body {
 #debContainer, #optContainer, #cartsContainer {
 }
 
-#debBody, #optBody, #cartsBody {
+#debBody, .optBody, #cartsBody {
     background-color: rgba(0, 71, 171, 0.2);
     border: 1px solid black;
     border-radius: 6px;
@@ -87,7 +91,7 @@ body {
 }
 
 .slider-text {
-    padding-top: 15px;
+    padding-top: 5px;
     text-align: right;
     float:left;
 }
